--- a/src/components/Cards/CardGrid.css
+++ b/src/components/Cards/CardGrid.css
@@ -2,8 +2,11 @@
   display: grid;
   grid-template-columns: auto auto auto auto;
   gap: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .card {
+  background-color: rgb(165, 163, 163);
   width: 150px;
   height: 150px;
   margin: 20px;
@@ -12,4 +15,11 @@
   flex-direction: column;
   align-items: space-between;
   text-align: center;
+  padding: 5px;
+  box-shadow: 2px 3px 5px 2px;
+  transition: transform 0.2s;
+}
+
+.card:hover {
+  transform: scale(1.25);
 }
