--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,13 @@ a {
   text-decoration: none;
   color: black;
 }
+
+@media only screen and (max-width: 650px) {
+  .pokemon-logo {
+    width: 150px;
+  }
+  .memory-game-logo {
+    width: 80px;
+    height: 50px;
+  }
+}
