--- a/src/components/Cards/CardGrid.css
+++ b/src/components/Cards/CardGrid.css
@@ -23,3 +23,15 @@
 .card:hover {
   transform: scale(1.25);
 }
+
+@media only screen and (max-width: 650px) {
+  .card-grid {
+    grid-template-columns: auto auto auto;
+  }
+  .card {
+    font-size: 12px;
+    width: 70px;
+    height: 80px;
+    margin: 10px;
+  }
+}
