--- a/src/components/ScoreBoard/ScoreBoard.css
+++ b/src/components/ScoreBoard/ScoreBoard.css
@@ -10,3 +10,11 @@
   height: 100px;
   justify-content: space-evenly;
 }
+
+@media only screen and (max-width: 650px) {
+  .scoreboard {
+    width: 100px;
+    height: 50px;
+    font-size: 12px;
+  }
+}
